@@ -248,6 +248,8 @@
 #define IDC_CHECK4                      1699
 #define IDC_MICROLF                     1699
 #define IDC_EVENTAPI                    1699
+#define IDC_CHECK7                      1700
+#define IDC_DELETETEMP                  1700
 #define IDD_MSGSPLITNEW                 2000
 #define IDD_OPT_MSGWINDOWFONTS          2001
 #define IDM_COPY                        40001
@@ -368,7 +370,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        310
 #define _APS_NEXT_COMMAND_VALUE         40173
-#define _APS_NEXT_CONTROL_VALUE         1700
+#define _APS_NEXT_CONTROL_VALUE         1701
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
